--- a/ios/Yakapp/Info.plist
+++ b/ios/Yakapp/Info.plist
@@ -74,6 +74,7 @@
 		<string>Poppins-Light.ttf</string>
 		<string>Poppins-Regular.ttf</string>
 		<string>Poppins-SemiBold.ttf</string>
+		<string>Poppins-Medium.ttf</string>
 	</array>
 </dict>
 </plist>
