--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.36.4",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.9.2",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^1.13.2",
