--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "expo": ">=43.0.0-* <44.0.0",
+    "expo-speech": "~10.0.3"
   },
   "devDependencies": {
     "@babel/core": "7.15.5",
