--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
+    "@react-native-community/voice": "^1.1.9",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/drawer": "^6.1.6",
@@ -20,6 +21,8 @@
     "@reduxjs/toolkit": "^1.6.2",
     "add": "^2.0.6",
     "axios": "^0.22.0",
+    "expo": ">=43.0.0-* <44.0.0",
+    "expo-speech": "~10.0.3",
     "react": "17.0.2",
     "react-native": "0.66.0",
     "react-native-camera": "^4.2.1",
@@ -39,9 +42,7 @@
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
-    "expo": ">=43.0.0-* <44.0.0",
-    "expo-speech": "~10.0.3"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.15.5",
