--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
   package="com.yakapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    
+    
     <!-- Required -->
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -13,6 +15,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
     <application
+      android:requestLegacyExternalStorage="true"
       android:usesCleartextTraffic="true"
       android:name=".MainApplication"
       android:label="@string/app_name"
