--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.36.4",
+    "react-native-image-picker": "^4.6.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.9.2",
     "react-native-progress": "^5.0.0",
@@ -39,10 +40,12 @@
     "react-native-skeleton-placeholder": "^5.0.0",
     "react-native-svg": "^12.1.1",
     "react-native-tesseract-ocr": "^2.0.3",
+    "react-native-text-recognition": "^1.0.0",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rn-text-detector": "^0.0.8"
   },
   "devDependencies": {
     "@babel/core": "7.15.5",
@@ -51,6 +54,7 @@
     "babel-jest": "26.6.3",
     "eslint": "7.14.0",
     "jest": "26.6.3",
+    "jetifier": "^2.0.0",
     "metro-react-native-babel-preset": "0.66.2",
     "react-test-renderer": "17.0.2"
   },
